--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+  {
   "name": "docital",
   "private": true,
   "version": "0.0.0",
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
