--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^6.3.1",
     "@supabase/supabase-js": "^2.48.1",
     "@table-library/react-table-library": "^4.1.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
