--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@table-library/react-table-library": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.476.0",
