reviewed task page

--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.1",
-    "@nivo/bar": "^0.88.0",
-    "@nivo/core": "^0.88.0",
-    "@nivo/line": "^0.88.0",
-    "@nivo/pie": "^0.88.0",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.48.1",
     "@table-library/react-table-library": "^4.1.7",
     "class-variance-authority": "^0.7.1",
